--- a/DeepH-tutorial/1.H2O/2.train/train.ini
+++ b/DeepH-tutorial/1.H2O/2.train/train.ini
@@ -24,7 +24,7 @@
 device = cpu
 dtype = float
 save_dir = test_save_dir
-additional_folder_name = test_zl
+additional_folder_name = test
 simplified_output = True
 seed = 42
 ; checkpoint_dir = 
